Updated presentation. Ready to submit.

--- a/Presentation_Proposal.html
+++ b/Presentation_Proposal.html
@@ -97,9 +97,7 @@
           </hgroup>
   </slide>
 
-<slide class=""><hgroup><h2>Intro</h2></hgroup><article  id="intro">
-
-</article></slide><slide class=""><hgroup><h2>Data</h2></hgroup><article  id="data">
+<slide class=""><hgroup><h2>Intro &amp; Data</h2></hgroup><article  id="intro-data">
 
 <ol>
 <li>Admissions
@@ -124,6 +122,22 @@
 </ol>
 
 </article></slide><slide class=""><hgroup><h2>Goal and audience</h2></hgroup><article  id="goal-and-audience">
+
+<p>Provide an at-a-glance way for prospective students to see what the average NCF student looks like and to see how they compare to the student body.</p>
+
+</article></slide><slide class=""><hgroup><h2>Goal and audience</h2></hgroup><article  id="goal-and-audience-1">
+
+<p>Provide an at-a-glance way for prospective students to see what the average NCF student looks like and to see how they compare to the student body.</p>
+
+<h3><code>The user can:</code></h3>
+
+<ol>
+<li>Get stats for the average NCF student</li>
+<li>Enter their own stats to see how they compare</li>
+<li>Personalize their own dashboard with the information they want the most.</li>
+</ol>
+
+</article></slide><slide class=""><hgroup><h2>Goal and audience</h2></hgroup><article  id="goal-and-audience-2">
 
 <p>Provide an at-a-glance way for prospective students to see what the average NCF student looks like and to see how they compare to the student body.</p>
 
@@ -177,9 +191,11 @@
 
 </article></slide><slide class=""><hgroup><h2>Discussion</h2></hgroup><article  id="discussion">
 
-<h3>When you applied to New College, what information did you wish you know? What information were you most interested in?</h3>
+<h3>When you applied to college, what info did you wish you knew?</h3>
 
-<h3>Feedback</h3></article></slide>
+<h3>What information were you most interested in?</h3>
+
+<h3>Questions?</h3></article></slide>
 
 
   <slide class="backdrop"></slide>
