bugfix chances.js

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <p>
             Enter your details and see how similar students fared in past New College admissions cycles.
           </p>
-          <div id="model-result" class="d-none">
+          <div id="model-result" class="d-none fade">
             <p>
               We would expect <strong id="model-result-pct">xx%</strong> of applicants with a similar profile to be accepted.
             </p>
