fixing form layout

--- a/index.html
+++ b/index.html
@@ -121,17 +121,17 @@
           <form id="chances">
             <div class="form-group">
               <div class="form-row">
-                <div class="col">
+                <div class="form-group col-md-4">
                   <label for="gpa">GPA:</label>
                   <input type="number" class="form-control" placeholder="GPA" id="gpa" 
                   required="true" step="0.01" min="0.0" max="5.0">
                 </div>
-                <div class="col">
+                <div class="form-group col-md-4">
                   <label for="sat">SAT Score (Math+Verbal):</label>
                   <input type="number" class="form-control" placeholder="SAT Score" id="sat"
                   step="10" min="400" max="1600">
                 </div>
-                <div class="col">
+                <div class="form-group col-md-4">
                   <label for="act">ACT Score:</label>
                   <input type="number" class="form-control" placeholder="ACT Score" id="act"
                   step = "1" min="1" max="36">
