--- a/index.html
+++ b/index.html
@@ -106,6 +106,9 @@
           </div>
           <div class="card-body" id="demog-body">
             <h1>Venezuelan and Indian, 'Rican and Dominican, Japanese or Portuguese, Quarter of Brazilian, White and Korean, Black and Pinay</h1>
+            <div class="col-md-4">
+              <div id="graph-race" class="text-center"></div>
+            </div>
           </div>
         </div>
 
@@ -161,5 +164,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script type="text/javascript" src="js/chances.js"></script>
+
+    <script src="https://d3js.org/d3.v4.min.js"></script>
+    <script type="text/javascript" src="js/graphs.js"></script>
   </body>
 </html>
