added css and another graph

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
+    <link rel="stylesheet" type="text/css" href="css/graphs.css">
+
     <title>NCF Student Profile</title>
   </head>
   <body>
@@ -106,8 +108,13 @@
           </div>
           <div class="card-body" id="demog-body">
             <h1>Venezuelan and Indian, 'Rican and Dominican, Japanese or Portuguese, Quarter of Brazilian, White and Korean, Black and Pinay</h1>
-            <div class="col-md-4">
-              <div id="graph-race" class="text-center"></div>
+            <div class="row">
+              <div class="col-md-4">
+                <div id="graph-race" class="text-center"></div>
+              </div>
+              <div class="col-md-4">
+                <div id="graph-residence" class="text-center"></div>
+              </div>
             </div>
           </div>
         </div>
