--- a/R/index.html
+++ b/R/index.html
@@ -173,6 +173,9 @@
     <script type="text/javascript" src="js/chances.js"></script>
 
     <script src="https://d3js.org/d3.v4.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/d3pie@0.2.1/d3pie/d3pie.min.js"></script>
+
     <script type="text/javascript" src="js/graphs.js"></script>
+    <script type="text/javascript" src="js/piecharts.js"></script>
   </body>
 </html>
