--- a/index.html
+++ b/index.html
@@ -63,6 +63,17 @@
           </div>
           <div class="card-body" id="scores-body">
             <h1>Numbers don't lie, check the scoreboard.</h1>
+            <div class="row">
+              <div class="col-md-4">
+                <div id="graph-GPA" ></div>
+              </div>
+              <div class="col-md-4">
+                <div id="graph-SAT" ></div>
+              </div>
+              <div class="col-md-4">
+                <div id="graph-ACT" ></div>
+              </div>
+            </div>
           </div>
         </div>
 
@@ -133,7 +144,7 @@
               <div class="form-row">
                 <div class="form-group col-md-4">
                   <label for="gpa">GPA:</label>
-                  <input type="number" class="form-control" placeholder="GPA" id="gpa" 
+                  <input type="number" class="form-control" placeholder="GPA" id="gpa"
                   required="true" step="0.01" min="0.0" max="5.0">
                 </div>
                 <div class="form-group col-md-4">
