--- a/index.html
+++ b/index.html
@@ -120,12 +120,115 @@
           <div class="card-body" id="demog-body">
             <h1>Venezuelan and Indian, 'Rican and Dominican, Japanese or Portuguese, Quarter of Brazilian, White and Korean, Black and Pinay</h1>
             <div class="row">
-              <div class="col-md-4">
-                <div id="graph-race" class="text-center"></div>
-              </div>
-              <div class="col-md-4">
+              <!-- <div class="col-md-12"> -->
+                <div id="pieChart"></div>
+
+                <script src="//cdnjs.cloudflare.com/ajax/libs/d3/4.7.2/d3.min.js"></script>
+                <script src="d3pie.min.js"></script>
+                <script>
+                var pie = new d3pie("pieChart", {
+                	"header": {
+                		"title": {
+                			"text": "Race/Ethnicity",
+                			"fontSize": 29,
+                			"font": "open sans"
+                		},
+                		"subtitle": {
+                			"color": "#999999",
+                			"fontSize": 10,
+                			"font": "courier"
+                		},
+                		"location": "pie-center",
+                		"titleSubtitlePadding": 10
+                	},
+                	"footer": {
+                		"text": "* This was curious. We're not sure why several people regard Winnipeg as a Top 15 Fear.",
+                		"color": "#999999",
+                		"fontSize": 10,
+                		"font": "open sans",
+                		"location": "bottom-left"
+                	},
+                	"size": {
+                		"canvasWidth": 900,
+                		"pieInnerRadius": "64%",
+                		"pieOuterRadius": "76%"
+                	},
+                	"data": {
+                		"sortOrder": "label-asc",
+                		"content": [
+                			{
+                				"label": "Asian",
+                				"value": 27,
+                				"color": "#001f7c"
+                			},
+                			{
+                				"label": "Hispanic",
+                				"value": 154,
+                				"color": "#32368d"
+                			},
+                			{
+                				"label": "Black",
+                				"value": 24,
+                				"color": "#4869bb"
+                			},
+                			{
+                				"label": "White",
+                				"value": 593,
+                				"color": "#5f81da"
+                			},
+                			{
+                				"label": "Multiracial",
+                				"value": 31,
+                				"color": "#4d6fcc"
+                			}
+                		]
+                	},
+                	"labels": {
+                		"outer": {
+                			"format": "label-percentage1",
+                			"pieDistance": 20
+                		},
+                		"inner": {
+                			"format": "none"
+                		},
+                		"mainLabel": {
+                			"fontSize": 11
+                		},
+                		"percentage": {
+                			"color": "#999999",
+                			"fontSize": 11,
+                			"decimalPlaces": 0
+                		},
+                		"value": {
+                			"color": "#cccc43",
+                			"fontSize": 11
+                		},
+                		"lines": {
+                			"enabled": true,
+                			"color": "#777777"
+                		},
+                		"truncation": {
+                			"enabled": true
+                		}
+                	},
+                	"effects": {
+                		"pullOutSegmentOnClick": {
+                			"effect": "linear",
+                			"speed": 400,
+                			"size": 8
+                		}
+                	},
+                	"misc": {
+                		"colors": {
+                			"segmentStroke": "#000000"
+                		}
+                	}
+                });
+                </script>
+              <!-- </div> -->
+              <!-- <div class="col-md-4">
                 <div id="graph-residence" class="text-center"></div>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
