--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                   <div class="text-light" style="background-image: url(https://photos.smugmug.com/photos/i-LDVhpgV/0/1280x720!/i-LDVhpgV-1280x720!.jpg); background-position: 33% 90%;">
                   <button class="btn btn-link text-light" aria-expanded="false" data-toggle="collapse"
                   data-target="#aoc-collapse" aria-controls="aoc-collapse">
-                    <h1>AOCs/Majors</h1>
+                    <h1>Academics</h1>
                   </button>
                 </div>
           </div>
@@ -89,6 +89,20 @@
           </div>
           <div class="card-body" id="aoc-body">
             <h1>Economics is the best AOC!</h1>
+            <div class="row">
+              <div class="graph" class="col-lg-4">
+                <div id="top6-grad-aoc-donut"></div>
+              </div>
+              <div class="graph" class="col-lg-4">
+                <div id="aoc-division-donut"></div>
+              </div>
+              <div class="graph" class="col-lg-4">
+                <div id="faculty-race-donut"></div>
+              </div>
+              <div class="graph" class="col-lg-4">
+                <div id="faculty-gender-donut"></div>
+              </div>			  
+            </div>
           </div>
         </div>
 
@@ -120,10 +134,18 @@
           <div class="card-body" id="demog-body">
             <h1>Venezuelan and Indian, 'Rican and Dominican, Japanese or Portuguese, Quarter of Brazilian, White and Korean, Black and Pinay</h1>
             <div class="row">
-              <div class="col-lg-4">
+              <div class="graph" class="col-lg-4">
                 <div id="race-donut"></div>
               </div>
-              <div id="pieChart" class="col-lg-4"></div>
+              <div class="graph" class="col-lg-4">
+                <div id="gender-donut"></div>
+              </div>
+              <div class="graph" class="col-lg-4">
+                <div id="secondary-school-type-donut"></div>
+              </div>
+              <div class="graph" class="col-lg-4">
+                <div id="specialized-hs-donut"></div>
+              </div>			  
             </div>
           </div>
         </div>
