Changed alignment of the main buttons

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <link rel="stylesheet" type="text/css" href="css/graphs.css">
+	<link rel="stylesheet" type="text/css" href="css/chances.css">
 
     <title>NCF Student Profile</title>
   </head>
@@ -20,34 +21,34 @@
       <div class="card">
         <div class="card-header">
           <div class="row">
-          <div class="col-md">
+          <!-- <div class="col-md"> -->
                 <div class="text-light" style="background-image: url(https://photos.smugmug.com/photos/i-LDVhpgV/0/1280x720!/i-LDVhpgV-1280x720!.jpg); background-position: 33% 90%;">
                   <button class="btn btn-link text-light" aria-expanded="false" data-toggle="collapse"
                   data-target="#scores-collapse" aria-controls="scores-collapse">
-                    <h1>GPA/SAT/ACT</h1>
+                    <h2>GPA/SAT/ACT</h2>
                   </button>
                 </div>
                   <div class="text-light" style="background-image: url(https://photos.smugmug.com/photos/i-LDVhpgV/0/1280x720!/i-LDVhpgV-1280x720!.jpg); background-position: 33% 90%;">
                   <button class="btn btn-link text-light" aria-expanded="false" data-toggle="collapse"
                   data-target="#aoc-collapse" aria-controls="aoc-collapse">
-                    <h1>Academics</h1>
+                    <h2>Academics</h2>
                   </button>
                 </div>
-          </div>
-           <div class="col-md">
+          <!-- </div> -->
+           <!-- <div class="col-md"> -->
                 <div class="text-light" style="background-image: url(https://photos.smugmug.com/photos/i-LDVhpgV/0/1280x720!/i-LDVhpgV-1280x720!.jpg); background-position: 33% 90%;">
                   <button class="btn btn-link text-light" aria-expanded="false" data-toggle="collapse"
                   data-target="#finaid-collapse" aria-controls="finaid-collapse">
-                    <h1>Financial Aid</h1>
+                    <h2>Financial Aid</h2>
                   </button>
                 </div>
                   <div class="text-light" style="background-image: url(https://photos.smugmug.com/photos/i-LDVhpgV/0/1280x720!/i-LDVhpgV-1280x720!.jpg); background-position: 33% 90%;">
                   <button class="btn btn-link text-light" aria-expanded="false" data-toggle="collapse"
                   data-target="#demog-collapse" aria-controls="demog-collapse">
-                    <h1>Demographics</h1>
+                    <h2>Demographics</h2>
                   </button>
                 </div>
-          </div>
+          <!-- </div> -->
         </div>
         </div>
 
@@ -158,6 +159,43 @@
           </h5>
         </div>
 
+		<!---------------------------------------------------------->
+		
+		<div class="stat-carousel" id="wrapper-stat-carousel-17">
+			<div class="container">
+				<div class="section-heading">
+					<h2>
+									</h2>
+				</div>
+				
+					<div class="lSSlideOuter "><div class="lSSlideWrapper usingCss" style="transition-duration: 400ms; transition-timing-function: ease;"><ul id="stat-carousel-17" class="lightSlider lSSlide lsGrab" style="width: 2000px; height: 205px; padding-bottom: 0%; transform: translate3d(-769px, 0px, 0px);">
+											<li class="lslide" style="width: 739px; margin-right: 30px;">
+								<div class="stat">
+									<div class="context">*Weighted 0.5 pt. for honors; 1 pt. for dual enrollment/AP/IB/AICE.</div>
+									<div class="value">3.71 - 4.31</div>
+									<div class="h3">GPA*</div>
+								</div>
+							</li>
+											<li class="lslide active" style="width: 739px; margin-right: 30px;">
+								<div class="stat">
+									<div class="context">(Evidence-based Reading/Writing and Math)</div>
+									<div class="value">1200-1360</div>
+									<div class="h3">SAT scores</div>
+								</div>
+							</li>
+											<li class="lslide" style="width: 739px; margin-right: 30px;">
+								<div class="stat">
+									<div class="context">(Composite score)</div>
+									<div class="value">25-30</div>
+									<div class="h3">ACT scores</div>
+								</div>
+							</li>
+									</ul><div class="lSAction" style="display: block;"><a class="lSPrev"><span class="glyphicon glyphicon-menu-left"></span><span class="sr-only">previous</span></a><a class="lSNext"><span class="glyphicon glyphicon-menu-right"></span><span class="sr-only">next</span></a></div></div></div>
+			</div>
+		</div>		
+
+		<!---------------------------------------------------------->
+		
         <div class="collapse show card-body" id="chances-collapse">
           <form id="chances">
             <div class="form-group">
