Adding comments to my changes

--- a/index.html
+++ b/index.html
@@ -158,7 +158,9 @@
             </button>
           </h5>
         </div>
-
+		
+		<!---------------------------------------------------------->
+		<!-- Slopilly copying the carousel from www.ncf.edu/class-profile -->
 		<!---------------------------------------------------------->
 		
 		<div class="stat-carousel" id="wrapper-stat-carousel-17">
