--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           </div>
           <div class="card-body" id="scores-body">
             <h1>Numbers don't lie, check the scoreboard.</h1>
-            <div class="row">
+            <div class="row justify-content-around">
               <div class="graph" class="col-lg-6">
                 <div id="graph-GPA" ></div>
                 <div id="graph-ACT" ></div>
@@ -87,20 +87,14 @@
           <div class="card-body" id="aoc-body">
             <h1>Economics is the best AOC!</h1>
             <div class="row">
-              <div class="graph" class="col-lg-4">
+              <div class="graph" class="col-lg-6">
                 <div id="top6-grad-aoc-donut"></div>
                 <div id="aoc-division-donut"></div>
               </div>
-              <div class="graph" class="col-lg-4">
+              <div class="graph" class="col-lg-6">
                 <div id="faculty-race-donut"></div>
                 <div id="faculty-gender-donut"></div>
               </div>
-              <div class="graph" class="col-lg-4">
-                
-              </div>
-              <div class="graph" class="col-lg-4">
-                
-              </div>			  
             </div>
           </div>
         </div>
@@ -143,65 +137,40 @@
         </div>
 
         <div class="card-header">
-          <h5 class="mb-0">
-              <button class="btn btn-link" data-toggle="collapse" data-target="#chances-collapse" aria-expanded="true" aria-controls="chances-collapse">
-              See My Chances
-            </button>
-          </h5>
+          <button class="btn btn-link" data-toggle="collapse" data-target="#chances-collapse" aria-expanded="true" aria-controls="chances-collapse">
+            <h2>See My Chances</h2>
+          </button>
         </div>
 		
 		<!---------------------------------------------------------->
 		<!-- Slopilly copying the carousel from www.ncf.edu/class-profile -->
-		<!---------------------------------------------------------->
-		
-		<div class="stat-carousel" id="wrapper-stat-carousel-17">
-			<div class="container">
-				<div class="lSSlideOuter "><div class="lSSlideWrapper usingCss" style="transition-duration: 400ms; transition-timing-function: ease;"><ul id="stat-carousel-17" class="lightSlider lSSlide lsGrab" style="width: 2000px; height: 205px; padding-bottom: 0%; transform: translate3d(-769px, 0px, 0px);">
-											<li class="lslide" style="width: 739px; margin-right: 30px;">
-								<div class="stat">
-									<div class="context">*Weighted 0.5 pt. for honors; 1 pt. for dual enrollment/AP/IB/AICE.</div>
-									<div class="value">3.71 - 4.31</div>
-									<div class="h3">GPA*</div>
-								</div>
-							</li>
-											<li class="lslide active" style="width: 739px; margin-right: 30px;">
-								<div class="stat">
-									<div class="context">(Evidence-based Reading/Writing and Math)</div>
-									<div class="value">1200-1360</div>
-									<div class="h3">SAT scores</div>
-								</div>
-							</li>
-											<li class="lslide" style="width: 739px; margin-right: 30px;">
-								<div class="stat">
-									<div class="context">(Composite score)</div>
-									<div class="value">25-30</div>
-									<div class="h3">ACT scores</div>
-								</div>
-							</li>
-									</ul><div class="lSAction" style="display: block;"><a class="lSPrev"><span class="glyphicon glyphicon-menu-left"></span><span class="sr-only">previous</span></a><a class="lSNext"><span class="glyphicon glyphicon-menu-right"></span><span class="sr-only">next</span></a></div></div></div>
-			</div>
-		</div>		
+		<!---------------------------------------------------------->	
 
 		<!-- CHANCES card -->
 		
         <div class="collapse show card-body" id="chances-collapse">
           <form id="chances">
-            <div class="form-group">
+            <div class="form-group stat-carousel">
               <div class="form-row">
+                <div class="col-md-4"><div class="context">*Weighted 0.5 pt. for honors; 1 pt. for dual enrollment/AP/IB/AICE.</div></div>
+                <div class="col-md-4"></div>
+                <div class="col-md-4"></div>
+              </div>
+              <div class="form-row container">
                 <div class="form-group col-md-4">
-                  <label for="gpa">GPA:</label>
-                  <input type="number" class="form-control" placeholder="GPA" id="gpa"
+                  <input type="number" class="form-control" placeholder="3.71 - 4.31" id="gpa"
                   required="true" step="0.01" min="0.0" max="5.0">
+                  <label for="gpa" class="h3">GPA*</label>
                 </div>
                 <div class="form-group col-md-4">
-                  <label for="sat">SAT Score (Math+Verbal):</label>
-                  <input type="number" class="form-control" placeholder="SAT Score" id="sat"
+                  <input type="number" class="form-control" placeholder="1200-1360" id="sat"
                   step="10" min="400" max="1600">
+                  <label for="sat" class="h3">SAT Score (Math+Verbal)</label>
                 </div>
                 <div class="form-group col-md-4">
-                  <label for="act">ACT Score:</label>
-                  <input type="number" class="form-control" placeholder="ACT Score" id="act"
+                  <input type="number" class="form-control" placeholder="25-30" id="act"
                   step = "1" min="1" max="36">
+                  <label for="act" class="h3">ACT Score</label>
                 </div>
               </div>
             </div>
