added tableau maps for residency

--- a/index.html
+++ b/index.html
@@ -146,6 +146,12 @@
                 <div id="specialized-hs-donut"></div>
               </div>
             </div>
+            <div class="row justify-content-around">
+              <div class="graph" class="col-lg-12">
+                <iframe src="https://public.tableau.com/views/ResidencyByUSRegion/ResidencyByRegion?:showVizHome=no&:embed=true" width="645" height="600"></iframe>
+                <iframe src="https://public.tableau.com/views/ResidencyByCounty/ResidencyByCounty?:showVizHome=no&:embed=true" width="645" height="600"></iframe>
+              </div>
+            </div>
           </div>
         </div>
 
@@ -154,13 +160,13 @@
             <h2>See My Chances</h2>
           </button>
         </div>
-		
+
 		<!---------------------------------------------------------->
 		<!-- Slopilly copying the carousel from www.ncf.edu/class-profile -->
-		<!---------------------------------------------------------->	
+		<!---------------------------------------------------------->
 
 		<!-- CHANCES card -->
-		
+
         <div class="collapse show card-body" id="chances-collapse">
           <form id="chances">
             <div class="stat-carousel">
